# LOB

./: .clang-format  .clang-tidy  .env.example  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  codecov.yml  config.example.json  docker-compose.yml  vcpkg.json
.github/workflows/: lint.yml  test.yml
grafana/dashboards/: lob-exchange.json  lob-subscribers.json  lob.json
grafana/provisioning/dashboards/: dashboard.yml
prometheus/: prometheus.yml
src/: binance_adapter.cpp  binance_adapter.hpp  binance_utils.hpp  decimal.hpp  feed_handler.cpp  feed_handler.hpp  i_exchange_adapter.hpp  kraken_adapter.cpp  kraken_adapter.hpp  kraken_utils.hpp  main.cpp  metrics.hpp  metrics_server.hpp  ofi_types.hpp  order_book.cpp  order_book.hpp  price_ladder.cpp  price_ladder.hpp  prometheus_format.hpp  safe_arithmetic.hpp  subscriber_protocol.hpp  subscriber_server.hpp  subscriber_stats.hpp  symbol_normalizer.hpp
src/utils/: checked_arith.hpp
tests/: test_binance_utils.cpp  test_decimal.cpp  test_kraken_utils.cpp  test_order_book.cpp  test_prometheus_format.cpp  test_safe_arithmetic.cpp  test_subscriber_server.cpp  test_symbol_normalizer.cpp  vcpkg.json
tools/: recorder.py  replayer.py
